[project]
name = "beatport2youtube"
version = "0.0.1"
dependencies = [
    "requests>=2.32.5",
]
requires-python = ">= 3.12"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# E, F: pyflakes (基本的なエラー)
# W: pycodestyle (警告)
# I: isort (importの並び替え)
# UP: pyupgrade (よりモダンなPython記法への自動修正)
# B: flake8-bugbear (バグの可能性が高いコードを検出)
# C4: flake8-comprehensions (不必要な内包表記を検出して修正)
select = ["E", "F", "W", "I", "UP", "B", "C4"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["beatport2youtube"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.9",
]
